--- a/hw1/index.html
+++ b/hw1/index.html
@@ -28,15 +28,15 @@
 	<body>
 		<div class="container">
 		<h1>CS184/284A Spring 2025 Homework 1 Write-Up</h1>
-		<div style="text-align: center;">Names: </div>
+		<div style="text-align: center;">Names: Yuanchen Li</div>
 
 		<br>
 
-		Link to webpage: (TODO) <a href="https://cs184.eecs.berkeley.edu/sp25">cs184.eecs.berkeley.edu/sp25</a>
+		Link to webpage: <a href="https://cal-cs184.github.io/hw-webpages-su25-Luke-liyy/hw1/">https://cal-cs184.github.io/hw-webpages-su25-Luke-liyy/hw1/</a>
 		
 		<br>
 
-		Link to GitHub repository: (TODO) <a href="https://cs184.eecs.berkeley.edu/sp25">cs184.eecs.berkeley.edu/sp25</a>
+		Link to GitHub repository: <a href="https://github.com/cal-cs184/hw-webpages-su25-Luke-liyy">https://github.com/cal-cs184/hw-webpages-su25-Luke-liyy</a>
 
 		<figure>
 			<img src="lion.jpg" alt="Lion" style="width:50%"/>
@@ -46,6 +46,18 @@
 		<!--
 		We've already added one heading per task, to make your write-up as navigable when grading. Please fit your write-up within these sections!
 		-->
+
+		<h2>PDF版本</h2>
+		<p>如果你想查看PDF版本的报告，可以点击下面的链接下载，或者直接在浏览器中查看：</p>
+		<div style="text-align: center; margin: 20px 0;">
+			<a href="Hw1.pdf" target="_blank" style="background-color: #4CAF50; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px;">📄 查看/下载PDF报告</a>
+		</div>
+		
+		<!-- PDF嵌入显示 -->
+		<div style="text-align: center; margin: 20px 0;">
+			<embed src="Hw1.pdf" type="application/pdf" width="100%" height="600px" style="border: 1px solid #ccc;">
+			<p><i>如果PDF无法正常显示，请点击上方链接下载查看。</i></p>
+		</div>
 
 		<h2>Overview</h2>
 		Give a high-level overview of what you implemented in this homework. Think about what you've built as a whole. Share your thoughts on what interesting things you've learned from completing the homework.
