--- a/hw2/index.html
+++ b/hw2/index.html
@@ -32,11 +32,11 @@
 
 		<br>
 
-		Link to webpage: (TODO) <a href="https://cal-cs184.github.io/hw-webpages-su25-Luke-liyy/hw2/">https://cal-cs184.github.io/hw-webpages-su25-Luke-liyy/hw2/</a>
+		Link to webpage: <a href="https://cal-cs184.github.io/hw-webpages-su25-Luke-liyy/hw2/">https://cal-cs184.github.io/hw-webpages-su25-Luke-liyy/hw2/</a>
 
 		<br>
 		
-		Link to GitHub repository: (TODO) <a href="https://cal-cs184.github.io/hw-webpages-su25-Luke-liyy/">chttps://cal-cs184.github.io/hw-webpages-su25-Luke-liyy/</a>
+		Link to GitHub repository: <a href="https://cal-cs184.github.io/hw-webpages-su25-Luke-liyy/">chttps://cal-cs184.github.io/hw-webpages-su25-Luke-liyy/</a>
 
 
 
@@ -230,6 +230,10 @@
 			<figure style="margin:0; text-align:center;">
 				<img src="pic/part6/pressL.png" alt="pressL" style="width:300px"/>
 				<figcaption>pressL</figcaption>
+			</figure>
+			<figure style="margin:0; text-align:center;">
+				<img src="pic/part6/cube.png" alt="cube" style="width:300px"/>
+				<figcaption>cube</figcaption>
 			</figure>
 		</div>
 		<p>When Loop subdivision was applied to the Utah teapot, two distinct failure modes emerged. The first was geometric distortion: after the initial subdivision the surface erupted into spikes and cross-shaped slivers, and although further refinement was possible, the artefacts grew progressively worse. The second was a topological breakdown: no proper 4-to-1 splits appeared and a second subdivision attempt drove the program into an infinite loop or outright crash.</p>
