--- a/hw2/index.html
+++ b/hw2/index.html
@@ -36,7 +36,7 @@
 
 		<br>
 		
-		Link to GitHub repository: <a href="https://cal-cs184.github.io/hw-webpages-su25-Luke-liyy/">chttps://cal-cs184.github.io/hw-webpages-su25-Luke-liyy/</a>
+		Link to GitHub repository: <a href="https://github.com/cal-cs184/hw2-meshedit-one-more-turn2">https://github.com/cal-cs184/hw2-meshedit-one-more-turn2</a>
 
 
 
