--- a/hw3/index.html
+++ b/hw3/index.html
@@ -32,8 +32,8 @@
 
 		<br>
 
-		Link to webpage: (TODO) <a href="https://cs184.eecs.berkeley.edu/sp25">cs184.eecs.berkeley.edu/sp25</a>
-		Link to GitHub repository: (TODO) <a href="https://cs184.eecs.berkeley.edu/sp25">cs184.eecs.berkeley.edu/sp25</a>
+		Link to webpage: <a href="https://cal-cs184.github.io/hw-webpages-su25-Luke-liyy/hw3/">https://cal-cs184.github.io/hw-webpages-su25-Luke-liyy/hw3/</a><br>
+		Link to GitHub repository: <a href="https://github.com/cal-cs184/hw-pathtracer-updated-one-more-turn3">https://github.com/cal-cs184/hw-pathtracer-updated-one-more-turn3</a>
 		
 		<figure>
 			<img src="cornell.png" alt="Cornell Boxes with Bunnies" style="width:70%"/>
