Update Acknowledgement of AI

--- a/hw3/index.html
+++ b/hw3/index.html
@@ -530,8 +530,13 @@
 				</tr>
 			</table>
 		</figure>
-
+		<h2>Acknowledgement of AI</h2>
+		<p>
+			I used ChatGPT only for translation purposes in the write-up. No AI tools were used 
+			for solving or implementing the assignment.
+		</p>
 		
 		</div>
+
 	</body>
 </html>
